--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola Mundo</title>
+    <title>Hola Mundo Git</title>
 </head>
 <body>
     <p>
-        Hola, ya esto lo se hacer. Soy David y se programacion basica.
+        Hola, ya estoy aprendiendo como montar archivos en git.
     </p>
 </body>
 </html>
